add linkedin widget

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -13,3 +13,14 @@
         </a>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-offset-4
+    LI-profile-badge" data-version="v1"
+         data-size="large" data-locale="ru_RU"
+         data-type="horizontal" data-theme="dark"
+         data-vanity="drapegnik">
+        <a class="LI-simple-link" href='https://by.linkedin.com/in/drapegnik?trk=profile-badge'>
+            Ivan Pazhitnykh
+        </a>
+    </div>
+</div>
