--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,9 @@
 <!-- Bootstrap -->
 <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}" type="text/javascript"></script>
 
+<!-- Linkedin -->
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
 <!-- JS -->
 <script src="{% static 'scripts/app.js' %}" type="text/javascript"></script>
 <script src="{% static 'scripts/controllers.js' %}" type="text/javascript"></script>
